# hcmd

./: README  basename.hs  cat.hs  chown  chown.hs  cp.hs  echo.hs  hcmd.cabal  mkdir.hs  mv.hs  rm.hs  rmdir.hs
HCmd/: Chmod.hs
mkdir/: Chmod.hs  Main.hs  Mkdir.hs
