name:                hcmd
version:             0.1
synopsis:            A collection of UNIX command line utilities, written in Haskell.
license:             OtherLicense
license-file:        LICENSE
author:              Grant Mather
maintainer:          hcaulfield57@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable rm
    main-is: rm.hs
    build-depends: base, unix, directory, mtl

executable mkdir
    main-is: mkdir.hs
    other-modules: HCmd.Chmod
    build-depends: base, unix, directory
