name:                hcmd
version:             0.1
synopsis:            A collection of UNIX command line utilities, written in Haskell.
license:             OtherLicense
license-file:        LICENSE
author:              Grant Mather
maintainer:          hcaulfield57@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable basename
    main-is: basename.hs
    build-depends: base

executable cat
    main-is: cat.hs
    build-depends: base

executable cp
    main-is: cp.hs
    build-depends: base, directory, mtl

executable echo
    main-is: echo.hs
    build-depends: base

executable mkdir
    main-is: mkdir.hs
    other-modules: HCmd.Chmod
    build-depends: base, unix, directory, parsec

executable mv
    main-is: mv.hs
    build-depends: base, directory

executable rm
    main-is: rm.hs
    build-depends: base, unix, directory, mtl

executable chown
    main-is: chown.hs
    build-depends: base, parsec, unix, mtl
